--- a/Hobbies.html
+++ b/Hobbies.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-    <html lang = "en"></html>
+    <html lang = "en">
     <head>
         <meta charset="UTF-8">
         <title>My Hobbies</title>
@@ -20,3 +20,4 @@
         </ol>
         <h2>Fun Fact</h2>
         I can speak English, Chinese and is currrently learning German and Korean
+    </html>
