--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </ul>
 </body>
 <hr/>
-<a href="/Capstone/Capstone 1/Hobbies.html" ><img src="/Capstone/Capstone 1/dog.png" height="200"></a>
+<a href="/Capstone/Capstone 1/Hobbies.html" onclick="window.open('/Capstone/Capstone 1/Hobbies.html','_self')('><img src="/Capstone/Capstone 1/dog.png" height="200";"></a>
 <br/> <a href="/Capstone/Capstone 1/Hobbies.html"> Hobbies</a>
 
 <br/>
