--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     </ul>
 </body>
 <hr/>
-<a href="/Capstone/Capstone 1/Hobbies.html" onclick="window.open('/Capstone/Capstone 1/Hobbies.html','_self')('><img src="/Capstone/Capstone 1/dog.png" height="200";"></a>
-<br/> <a href="/Capstone/Capstone 1/Hobbies.html"> Hobbies</a>
+<a href="Hobbies.html" onclick="window.open('Hobbies.html','_self')('><img src="dog.png" height="200";"></a>
+<br/> <a href="Hobbies.html"> Hobbies</a>
 
 <br/>
 <br/>
