--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </ul>
 </body>
 <hr/>
-<a href="Hobbies.html" onclick="window.open('Hobbies.html','_self')<img src="dog.png" height="200";"></a>
+<a href="Hobbies.html"><img src="dog.png" height="200";"/></a>
 <br/> <a href="Hobbies.html"> Hobbies</a>
 
 <br/>
