--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </ul>
 </body>
 <hr/>
-<a href="Hobbies.html"><img src="dog.png" height="200"/></a>
+<a href="Hobbies.html"><img src="dog.png" height="200" alt="secret link to my hobbies"/></a>
 <br/> <a href="Hobbies.html"> Hobbies</a>
 
 <br/>
